--- a/src/main/webapp/navbar.jspf
+++ b/src/main/webapp/navbar.jspf
@@ -38,9 +38,10 @@
                 </div>
             </li>
             <li class="nav-item">
-                <c:if test="${sessionScope.user != null}">
-                    ${sessionScope.user.login}
-                </c:if>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="text"  readonly
+                           value="Koszyk (${sessionScope.cart.quantity}) o wartości ${sessionScope.cart.price} zł"/>
+                </form>
             </li>
         </ul>
 
